--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "11.7.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
